# ChessGame

./: CMakeLists.txt  README.md  TUTO.TXT  main.cpp  readme.txt  test.cpp
board/: board.cpp  board.hpp
game/: game.cpp  game.hpp
mask/: mask.cpp  mask.hpp
types/: types.hpp
view/: view.cpp  view.hpp
